python/versioned_docs/version-1.14.0/api/class-browsertype.mdx
---
id: class-browsertype
title: "BrowserType"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

BrowserType provides methods to launch a specific browser instance or connect to an existing one. The following is a typical example of using Playwright to drive automation:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import sync_playwright

def run(playwright):
    chromium = playwright.chromium
    browser = chromium.launch()
    page = browser.new_page()
    page.goto("https://example.com")
    # other actions...
    browser.close()

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
from playwright.async_api import async_playwright

async def run(playwright):
    chromium = playwright.chromium
    browser = await chromium.launch()
    page = await browser.new_page()
    await page.goto("https://example.com")
    # other actions...
    await browser.close()

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>


- [browser_type.connect(ws_endpoint, **kwargs)](./api/class-browsertype.mdx#browser-type-connect)
- [browser_type.connect_over_cdp(endpoint_url, **kwargs)](./api/class-browsertype.mdx#browser-type-connect-over-cdp)
- [browser_type.executable_path](./api/class-browsertype.mdx#browser-type-executable-path)
- [browser_type.launch(**kwargs)](./api/class-browsertype.mdx#browser-type-launch)
- [browser_type.launch_persistent_context(user_data_dir, **kwargs)](./api/class-browsertype.mdx#browser-type-launch-persistent-context)
- [browser_type.name](./api/class-browsertype.mdx#browser-type-name)

## browser_type.connect(ws_endpoint, **kwargs) {#browser-type-connect}
- `ws_endpoint`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-ws-endpoint"/> &#60;[str]&#62; A browser websocket endpoint to connect to.<a href="#browser-type-connect-option-ws-endpoint" class="list-anchor">#</a>
- `headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-headers"/> &#60;[Dict]\[[str], [str]\]&#62; Additional HTTP headers to be sent with web socket connect request. Optional.<a href="#browser-type-connect-option-headers" class="list-anchor">#</a>
- `slow_mo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-slow-mo"/> &#60;[float]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.<a href="#browser-type-connect-option-slow-mo" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-option-timeout"/> &#60;[float]&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-connect-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-return"/> &#60;[Browser]&#62;<a href="#browser-type-connect-return" class="list-anchor">#</a>

This methods attaches Playwright to an existing browser instance.

## browser_type.connect_over_cdp(endpoint_url, **kwargs) {#browser-type-connect-over-cdp}
- `endpoint_url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-endpoint-url"/> &#60;[str]&#62; A CDP websocket endpoint or http url to connect to. For example `http://localhost:9222/` or `ws://127.0.0.1:9222/devtools/browser/387adf4c-243f-4051-a181-46798f4a46f4`.<a href="#browser-type-connect-over-cdp-option-endpoint-url" class="list-anchor">#</a>
- `headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-headers"/> &#60;[Dict]\[[str], [str]\]&#62; Additional HTTP headers to be sent with connect request. Optional.<a href="#browser-type-connect-over-cdp-option-headers" class="list-anchor">#</a>
- `slow_mo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-slow-mo"/> &#60;[float]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on. Defaults to 0.<a href="#browser-type-connect-over-cdp-option-slow-mo" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-option-timeout"/> &#60;[float]&#62; Maximum time in milliseconds to wait for the connection to be established. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-connect-over-cdp-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-connect-over-cdp-return"/> &#60;[Browser]&#62;<a href="#browser-type-connect-over-cdp-return" class="list-anchor">#</a>

This methods attaches Playwright to an existing browser instance using the Chrome DevTools Protocol.

The default browser context is accessible via [browser.contexts](./api/class-browser.mdx#browser-contexts).

:::note
Connecting over the Chrome DevTools Protocol is only supported for Chromium-based browsers.
:::

## browser_type.executable_path {#browser-type-executable-path}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-executable-path-return"/> &#60;[str]&#62;<a href="#browser-type-executable-path-return" class="list-anchor">#</a>

A path where Playwright expects to find a bundled browser executable.

## browser_type.launch(**kwargs) {#browser-type-launch}
- `args`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-args"/> &#60;[List]\[[str]\]&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).<a href="#browser-type-launch-option-args" class="list-anchor">#</a>
- `channel`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-channel"/> &#60;[str]&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).<a href="#browser-type-launch-option-channel" class="list-anchor">#</a>
- `chromium_sandbox`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-chromium-sandbox"/> &#60;[bool]&#62; Enable Chromium sandboxing. Defaults to `false`.<a href="#browser-type-launch-option-chromium-sandbox" class="list-anchor">#</a>
- `devtools`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-devtools"/> &#60;[bool]&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.<a href="#browser-type-launch-option-devtools" class="list-anchor">#</a>
- `downloads_path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-downloads-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed. In either case, the downloads are deleted when the browser context they were created in is closed.<a href="#browser-type-launch-option-downloads-path" class="list-anchor">#</a>
- `env`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-env"/> &#60;[Dict]\[[str], [str]|[float]|[bool]\]&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.<a href="#browser-type-launch-option-env" class="list-anchor">#</a>
- `executable_path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-executable-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path to a browser executable to run instead of the bundled one. If `executable_path` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.<a href="#browser-type-launch-option-executable-path" class="list-anchor">#</a>
- `firefox_user_prefs`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-firefox-user-prefs"/> &#60;[Dict]\[[str], [str]|[float]|[bool]\]&#62; Firefox user preferences. Learn more about the Firefox user preferences at [`about:config`](https://support.mozilla.org/en-US/kb/about-config-editor-firefox).<a href="#browser-type-launch-option-firefox-user-prefs" class="list-anchor">#</a>
- `handle_sighup`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-handle-sighup"/> &#60;[bool]&#62; Close the browser process on SIGHUP. Defaults to `true`.<a href="#browser-type-launch-option-handle-sighup" class="list-anchor">#</a>
- `handle_sigint`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-handle-sigint"/> &#60;[bool]&#62; Close the browser process on Ctrl-C. Defaults to `true`.<a href="#browser-type-launch-option-handle-sigint" class="list-anchor">#</a>
- `handle_sigterm`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-handle-sigterm"/> &#60;[bool]&#62; Close the browser process on SIGTERM. Defaults to `true`.<a href="#browser-type-launch-option-handle-sigterm" class="list-anchor">#</a>
- `headless`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-headless"/> &#60;[bool]&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.<a href="#browser-type-launch-option-headless" class="list-anchor">#</a>
- `ignore_default_args`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-ignore-default-args"/> &#60;[bool]|[List]\[[str]\]&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. If an array is given, then filters out the given default arguments. Dangerous option; use with care. Defaults to `false`.<a href="#browser-type-launch-option-ignore-default-args" class="list-anchor">#</a>
- `proxy`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-proxy"/> &#60;[Dict]&#62; Network proxy settings.<a href="#browser-type-launch-option-proxy" class="list-anchor">#</a>
  - `server` &#60;[str]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
  - `bypass` &#60;[str]&#62; Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
  - `username` &#60;[str]&#62; Optional username to use if HTTP proxy requires authentication.
  - `password` &#60;[str]&#62; Optional password to use if HTTP proxy requires authentication.
- `slow_mo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-slow-mo"/> &#60;[float]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.<a href="#browser-type-launch-option-slow-mo" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-timeout"/> &#60;[float]&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-launch-option-timeout" class="list-anchor">#</a>
- `traces_dir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-option-traces-dir"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; If specified, traces are saved into this directory.<a href="#browser-type-launch-option-traces-dir" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-return"/> &#60;[Browser]&#62;<a href="#browser-type-launch-return" class="list-anchor">#</a>

Returns the browser instance.

You can use `ignore_default_args` to filter out `--mute-audio` from default arguments:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser = playwright.chromium.launch( # or "firefox" or "webkit".
    ignore_default_args=["--mute-audio"]
)
```

</TabItem>
<TabItem value="async">

```py
browser = await playwright.chromium.launch( # or "firefox" or "webkit".
    ignore_default_args=["--mute-audio"]
)
```

</TabItem>
</Tabs>

> **Chromium-only** Playwright can also be used to control the Google Chrome or Microsoft Edge browsers, but it works best with the version of Chromium it is bundled with. There is no guarantee it will work with any other version. Use `executable_path` option with extreme caution.
>
> If Google Chrome (rather than Chromium) is preferred, a [Chrome Canary](https://www.google.com/chrome/browser/canary.html) or [Dev Channel](https://www.chromium.org/getting-involved/dev-channel) build is suggested.
>
> Stock browsers like Google Chrome and Microsoft Edge are suitable for tests that require proprietary media codecs for video playback. See [this article](https://www.howtogeek.com/202825/what%E2%80%99s-the-difference-between-chromium-and-chrome/) for other differences between Chromium and Chrome. [This article](https://chromium.googlesource.com/chromium/src/+/lkgr/docs/chromium_browser_vs_google_chrome.md) describes some differences for Linux users.

## browser_type.launch_persistent_context(user_data_dir, **kwargs) {#browser-type-launch-persistent-context}
- `user_data_dir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-user-data-dir"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path to a User Data Directory, which stores browser session data like cookies and local storage. More details for [Chromium](https://chromium.googlesource.com/chromium/src/+/master/docs/user_data_dir.md#introduction) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Command_Line_Options#User_Profile). Note that Chromium's user data directory is the **parent** directory of the "Profile Path" seen at `chrome://version`.<a href="#browser-type-launch-persistent-context-option-user-data-dir" class="list-anchor">#</a>
- `accept_downloads`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-accept-downloads"/> &#60;[bool]&#62; Whether to automatically download all the attachments. Defaults to `false` where all the downloads are canceled.<a href="#browser-type-launch-persistent-context-option-accept-downloads" class="list-anchor">#</a>
- `args`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-args"/> &#60;[List]\[[str]\]&#62; Additional arguments to pass to the browser instance. The list of Chromium flags can be found [here](http://peter.sh/experiments/chromium-command-line-switches/).<a href="#browser-type-launch-persistent-context-option-args" class="list-anchor">#</a>
- `base_url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-base-url"/> &#60;[str]&#62; When using [page.goto(url, **kwargs)](./api/class-page.mdx#page-goto), [page.route(url, handler)](./api/class-page.mdx#page-route), [page.wait_for_url(url, **kwargs)](./api/class-page.mdx#page-wait-for-url), [page.expect_request(url_or_predicate, **kwargs)](./api/class-page.mdx#page-wait-for-request), or [page.expect_response(url_or_predicate, **kwargs)](./api/class-page.mdx#page-wait-for-response) it takes the base URL in consideration by using the [`URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor for building the corresponding URL. Examples:<a href="#browser-type-launch-persistent-context-option-base-url" class="list-anchor">#</a>
  * baseURL: `http://localhost:3000` and navigating to `/bar.html` results in `http://localhost:3000/bar.html`
  * baseURL: `http://localhost:3000/foo/` and navigating to `./bar.html` results in `http://localhost:3000/foo/bar.html`
- `bypass_csp`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-bypass-csp"/> &#60;[bool]&#62; Toggles bypassing page's Content-Security-Policy.<a href="#browser-type-launch-persistent-context-option-bypass-csp" class="list-anchor">#</a>
- `channel`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-channel"/> &#60;[str]&#62; Browser distribution channel.  Supported values are "chrome", "chrome-beta", "chrome-dev", "chrome-canary", "msedge", "msedge-beta", "msedge-dev", "msedge-canary". Read more about using [Google Chrome and Microsoft Edge](./browsers.mdx#google-chrome--microsoft-edge).<a href="#browser-type-launch-persistent-context-option-channel" class="list-anchor">#</a>
- `chromium_sandbox`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-chromium-sandbox"/> &#60;[bool]&#62; Enable Chromium sandboxing. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-chromium-sandbox" class="list-anchor">#</a>
- `color_scheme`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-color-scheme"/> &#60;"light"|"dark"|"no-preference"&#62; Emulates `'prefers-colors-scheme'` media feature, supported values are `'light'`, `'dark'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'light'`.<a href="#browser-type-launch-persistent-context-option-color-scheme" class="list-anchor">#</a>
- `device_scale_factor`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-device-scale-factor"/> &#60;[float]&#62; Specify device scale factor (can be thought of as dpr). Defaults to `1`.<a href="#browser-type-launch-persistent-context-option-device-scale-factor" class="list-anchor">#</a>
- `devtools`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-devtools"/> &#60;[bool]&#62; **Chromium-only** Whether to auto-open a Developer Tools panel for each tab. If this option is `true`, the `headless` option will be set `false`.<a href="#browser-type-launch-persistent-context-option-devtools" class="list-anchor">#</a>
- `downloads_path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-downloads-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; If specified, accepted downloads are downloaded into this directory. Otherwise, temporary directory is created and is deleted when browser is closed. In either case, the downloads are deleted when the browser context they were created in is closed.<a href="#browser-type-launch-persistent-context-option-downloads-path" class="list-anchor">#</a>
- `env`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-env"/> &#60;[Dict]\[[str], [str]|[float]|[bool]\]&#62; Specify environment variables that will be visible to the browser. Defaults to `process.env`.<a href="#browser-type-launch-persistent-context-option-env" class="list-anchor">#</a>
- `executable_path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-executable-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path to a browser executable to run instead of the bundled one. If `executable_path` is a relative path, then it is resolved relative to the current working directory. Note that Playwright only works with the bundled Chromium, Firefox or WebKit, use at your own risk.<a href="#browser-type-launch-persistent-context-option-executable-path" class="list-anchor">#</a>
- `extra_http_headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-extra-http-headers"/> &#60;[Dict]\[[str], [str]\]&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.<a href="#browser-type-launch-persistent-context-option-extra-http-headers" class="list-anchor">#</a>
- `geolocation`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-geolocation"/> &#60;[Dict]&#62;<a href="#browser-type-launch-persistent-context-option-geolocation" class="list-anchor">#</a>
  - `latitude` &#60;[float]&#62; Latitude between -90 and 90.
  - `longitude` &#60;[float]&#62; Longitude between -180 and 180.
  - `accuracy` &#60;[float]&#62; Non-negative accuracy value. Defaults to `0`.
- `handle_sighup`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-handle-sighup"/> &#60;[bool]&#62; Close the browser process on SIGHUP. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-handle-sighup" class="list-anchor">#</a>
- `handle_sigint`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-handle-sigint"/> &#60;[bool]&#62; Close the browser process on Ctrl-C. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-handle-sigint" class="list-anchor">#</a>
- `handle_sigterm`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-handle-sigterm"/> &#60;[bool]&#62; Close the browser process on SIGTERM. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-handle-sigterm" class="list-anchor">#</a>
- `has_touch`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-has-touch"/> &#60;[bool]&#62; Specifies if viewport supports touch events. Defaults to false.<a href="#browser-type-launch-persistent-context-option-has-touch" class="list-anchor">#</a>
- `headless`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-headless"/> &#60;[bool]&#62; Whether to run browser in headless mode. More details for [Chromium](https://developers.google.com/web/updates/2017/04/headless-chrome) and [Firefox](https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Headless_mode). Defaults to `true` unless the `devtools` option is `true`.<a href="#browser-type-launch-persistent-context-option-headless" class="list-anchor">#</a>
- `http_credentials`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-http-credentials"/> &#60;[Dict]&#62; Credentials for [HTTP authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication).<a href="#browser-type-launch-persistent-context-option-http-credentials" class="list-anchor">#</a>
  - `username` &#60;[str]&#62;
  - `password` &#60;[str]&#62;
- `ignore_default_args`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-ignore-default-args"/> &#60;[bool]|[List]\[[str]\]&#62; If `true`, Playwright does not pass its own configurations args and only uses the ones from `args`. If an array is given, then filters out the given default arguments. Dangerous option; use with care. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-ignore-default-args" class="list-anchor">#</a>
- `ignore_https_errors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-ignore-https-errors"/> &#60;[bool]&#62; Whether to ignore HTTPS errors during navigation. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-ignore-https-errors" class="list-anchor">#</a>
- `is_mobile`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-is-mobile"/> &#60;[bool]&#62; Whether the `meta viewport` tag is taken into account and touch events are enabled. Defaults to `false`. Not supported in Firefox.<a href="#browser-type-launch-persistent-context-option-is-mobile" class="list-anchor">#</a>
- `java_script_enabled`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-java-script-enabled"/> &#60;[bool]&#62; Whether or not to enable JavaScript in the context. Defaults to `true`.<a href="#browser-type-launch-persistent-context-option-java-script-enabled" class="list-anchor">#</a>
- `locale`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-locale"/> &#60;[str]&#62; Specify user locale, for example `en-GB`, `de-DE`, etc. Locale will affect `navigator.language` value, `Accept-Language` request header value as well as number and date formatting rules.<a href="#browser-type-launch-persistent-context-option-locale" class="list-anchor">#</a>
- `no_viewport`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-no-viewport"/> &#60;[bool]&#62; Does not enforce fixed viewport, allows resizing window in the headed mode.<a href="#browser-type-launch-persistent-context-option-no-viewport" class="list-anchor">#</a>
- `offline`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-offline"/> &#60;[bool]&#62; Whether to emulate network being offline. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-offline" class="list-anchor">#</a>
- `permissions`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-permissions"/> &#60;[List]\[[str]\]&#62; A list of permissions to grant to all pages in this context. See [browser_context.grant_permissions(permissions, **kwargs)](./api/class-browsercontext.mdx#browser-context-grant-permissions) for more details.<a href="#browser-type-launch-persistent-context-option-permissions" class="list-anchor">#</a>
- `proxy`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-proxy"/> &#60;[Dict]&#62; Network proxy settings.<a href="#browser-type-launch-persistent-context-option-proxy" class="list-anchor">#</a>
  - `server` &#60;[str]&#62; Proxy to be used for all requests. HTTP and SOCKS proxies are supported, for example `http://myproxy.com:3128` or `socks5://myproxy.com:3128`. Short form `myproxy.com:3128` is considered an HTTP proxy.
  - `bypass` &#60;[str]&#62; Optional coma-separated domains to bypass proxy, for example `".com, chromium.org, .domain.com"`.
  - `username` &#60;[str]&#62; Optional username to use if HTTP proxy requires authentication.
  - `password` &#60;[str]&#62; Optional password to use if HTTP proxy requires authentication.
- `record_har_omit_content`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-har-omit-content"/> &#60;[bool]&#62; Optional setting to control whether to omit request content from the HAR. Defaults to `false`.<a href="#browser-type-launch-persistent-context-option-record-har-omit-content" class="list-anchor">#</a>
- `record_har_path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-har-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Enables [HAR](http://www.softwareishard.com/blog/har-12-spec) recording for all pages into the specified HAR file on the filesystem. If not specified, the HAR is not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser-context-close) for the HAR to be saved.<a href="#browser-type-launch-persistent-context-option-record-har-path" class="list-anchor">#</a>
- `record_video_dir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-video-dir"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Enables video recording for all pages into the specified directory. If not specified videos are not recorded. Make sure to call [browser_context.close()](./api/class-browsercontext.mdx#browser-context-close) for videos to be saved.<a href="#browser-type-launch-persistent-context-option-record-video-dir" class="list-anchor">#</a>
- `record_video_size`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-record-video-size"/> &#60;[Dict]&#62; Dimensions of the recorded videos. If not specified the size will be equal to `viewport` scaled down to fit into 800x800. If `viewport` is not configured explicitly the video size defaults to 800x450. Actual picture of each page will be scaled down if necessary to fit the specified size.<a href="#browser-type-launch-persistent-context-option-record-video-size" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; Video frame width.
  - `height` &#60;[int]&#62; Video frame height.
- `reduced_motion`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-reduced-motion"/> &#60;"reduce"|"no-preference"&#62; Emulates `'prefers-reduced-motion'` media feature, supported values are `'reduce'`, `'no-preference'`. See [page.emulate_media(**kwargs)](./api/class-page.mdx#page-emulate-media) for more details. Defaults to `'no-preference'`.<a href="#browser-type-launch-persistent-context-option-reduced-motion" class="list-anchor">#</a>
- `screen`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-screen"/> &#60;[Dict]&#62; Emulates consistent window screen size available inside web page via `window.screen`. Is only used when the `viewport` is set.<a href="#browser-type-launch-persistent-context-option-screen" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; page width in pixels.
  - `height` &#60;[int]&#62; page height in pixels.
- `slow_mo`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-slow-mo"/> &#60;[float]&#62; Slows down Playwright operations by the specified amount of milliseconds. Useful so that you can see what is going on.<a href="#browser-type-launch-persistent-context-option-slow-mo" class="list-anchor">#</a>
- `strict_selectors`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-strict-selectors"/> &#60;[bool]&#62; It specified, enables strict selectors mode for this context. In the strict selectors mode all operations on selectors that imply single target DOM element will throw when more than one element matches the selector. See [Locator] to learn more about the strict mode.<a href="#browser-type-launch-persistent-context-option-strict-selectors" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-timeout"/> &#60;[float]&#62; Maximum time in milliseconds to wait for the browser instance to start. Defaults to `30000` (30 seconds). Pass `0` to disable timeout.<a href="#browser-type-launch-persistent-context-option-timeout" class="list-anchor">#</a>
- `timezone_id`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-timezone-id"/> &#60;[str]&#62; Changes the timezone of the context. See [ICU's metaZones.txt](https://cs.chromium.org/chromium/src/third_party/icu/source/data/misc/metaZones.txt?rcl=faee8bc70570192d82d2978a71e2a615788597d1) for a list of supported timezone IDs.<a href="#browser-type-launch-persistent-context-option-timezone-id" class="list-anchor">#</a>
- `traces_dir`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-traces-dir"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; If specified, traces are saved into this directory.<a href="#browser-type-launch-persistent-context-option-traces-dir" class="list-anchor">#</a>
- `user_agent`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-user-agent"/> &#60;[str]&#62; Specific user agent to use in this context.<a href="#browser-type-launch-persistent-context-option-user-agent" class="list-anchor">#</a>
- `viewport`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-option-viewport"/> &#60;[NoneType]|[Dict]&#62; Sets a consistent viewport for each page. Defaults to an 1280x720 viewport. `no_viewport` disables the fixed viewport.<a href="#browser-type-launch-persistent-context-option-viewport" class="list-anchor">#</a>
  - `width` &#60;[int]&#62; page width in pixels.
  - `height` &#60;[int]&#62; page height in pixels.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-launch-persistent-context-return"/> &#60;[BrowserContext]&#62;<a href="#browser-type-launch-persistent-context-return" class="list-anchor">#</a>

Returns the persistent browser context instance.

Launches browser that uses persistent storage located at `user_data_dir` and returns the only context. Closing this context will automatically close the browser.

## browser_type.name {#browser-type-name}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-type-name-return"/> &#60;[str]&#62;<a href="#browser-type-name-return" class="list-anchor">#</a>

Returns browser name. For example: `'chromium'`, `'webkit'` or `'firefox'`.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
